# Advanced_Git_demo

./: .buildinfo  README.md  data_transforms.html  genindex.html  github_with_collaborators.html  good_coding_practices.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  writing_documentation.html
_sources/: github_with_collaborators.md.txt  good_coding_practices.md.txt  index.rst.txt  writing_documentation.md.txt
data_transforms/: __init__.py
docs/source/: conf.py  github_with_collaborators.md
