[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "data_transforms"
authors = [{name = "Coleman Krawczyk"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.10"
dependencies = [
    "numpy >=1.22.3,<1.24.3"
]

[project.optional-dependencies]
test = [
    "coverage[toml] >=6.3.2,<7.2.2",
    "flake8 >=4.0.1,<6.0.1",
]
doc = [
    "myst-nb >=0.15.0,<0.17.2",
    "sphinx >=4.5.0,<6.1.4",
    "sphinx_rtd_theme >=1.0.0,<1.2.1"
]
dev = [
    "data_transforms[test]",
    "data_transforms[doc]"
]

[project.urls]
Documentation = "https://ckrawczyk.github.io/Advanced_Git_demo/"
Source = "https://github.com/CKrawczyk/Advanced_Git_demo/"

[tool.flit.sdist]
exclude = [
    "docs/",
    "example_data/",
    "build_docs.sh"
]

[tool.coverage.run]
omit = ["*test*"]
source = ["data_transforms"]
command_line = "-m unittest discover"

[tool.coverage.report]
show_missing = true
